[package]
name = "yutudu-front"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.18"
gloo-storage = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = "0.11"
anyhow = "1"
yutudu-common = { path = "../yutudu-common" }